# odbc-rs

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  aliases.js  appveyor.yml  publish_docs.sh  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
cfg_if/: index.html  macro.cfg_if.html
doc_comment/: all.html  index.html  macro.doc_comment!.html  macro.doc_comment.html  macro.doctest!.html  macro.doctest.html  sidebar-items.js
encoding_rs/: all.html  enum.CoderResult.html  enum.DecoderResult.html  enum.EncoderResult.html  index.html  static.BIG5.html  static.BIG5_INIT.html  static.EUC_JP.html  static.EUC_JP_INIT.html  static.EUC_KR.html  static.EUC_KR_INIT.html  static.GB18030.html  static.GB18030_INIT.html  static.GBK.html  static.GBK_INIT.html  static.IBM866.html  static.IBM866_INIT.html  static.ISO_2022_JP.html  static.ISO_2022_JP_INIT.html  static.ISO_8859_10.html  static.ISO_8859_10_INIT.html  static.ISO_8859_13.html  static.ISO_8859_13_INIT.html  static.ISO_8859_14.html  static.ISO_8859_14_INIT.html  static.ISO_8859_15.html  static.ISO_8859_15_INIT.html  static.ISO_8859_16.html  static.ISO_8859_16_INIT.html  static.ISO_8859_2.html  static.ISO_8859_2_INIT.html  static.ISO_8859_3.html  static.ISO_8859_3_INIT.html  static.ISO_8859_4.html  static.ISO_8859_4_INIT.html  static.ISO_8859_5.html  static.ISO_8859_5_INIT.html  static.ISO_8859_6.html  static.ISO_8859_6_INIT.html  static.ISO_8859_7.html  (+48 more)
examples/: affected_row_count.rs  bind_params.rs  column_descriptions.rs  connect.rs  custom_get_data.rs  it_works.rs  list_tables.rs  print_drivers_and_datasources.rs  transactions.rs
local/: test.db
log/: constant.STATIC_MAX_LEVEL.html  enum.Level.html  enum.LevelFilter.html  enum.LogLevel.html  enum.LogLevelFilter.html  fn.logger.html  fn.max_level.html  fn.max_log_level.html  fn.set_boxed_logger.html  fn.set_logger.html  fn.set_logger_raw.html  fn.set_max_level.html  fn.shutdown_logger.html  fn.shutdown_logger_raw.html  index.html  macro.debug.html  macro.error.html  macro.info.html  macro.log.html  macro.log_enabled.html  macro.trace.html  macro.warn.html  struct.LogLocation.html  struct.LogMetadata.html  struct.LogRecord.html  struct.MaxLogLevelFilter.html  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html  struct.ShutdownLoggerError.html  (+1 more)
(+6569 files in other folders)
