[package]
name = "odbc"
description = "ODBC wrapper for idiomatic Rust"
version = "0.16.1"
authors = ["Konstantin Salikhov <koka58@yandex.ru>", "Markus Klein <markus-klein@live.de>"]
repository = "https://github.com/Koka/odbc-rs"
documentation = "http://koka.github.io/odbc-rs/odbc/"
homepage = "https://github.com/Koka/odbc-rs"
readme = "README.md"
keywords = ["odbc", "binding", "sql", "database", "db"]
license = "MIT"
categories = ["api-bindings", "database"]

[features]
default = []
travis = []

[dependencies]
odbc-sys = "0.8.2"
odbc-safe = "0.5.0"
log = "0.4.1"
encoding_rs = "0.8.14"
doc-comment = "0.3.1"

[dev-dependencies]
chrono = "0.4"
env_logger = "0.7"

[badges]
travis-ci = { repository = "Koka/odbc-rs", branch = "master" }
appveyor = { repository = "Koka/odbc-rs", branch = "master" }

